error
Traceback (most recent call last):
  File "/home/monte-carlo1/detect_people_rasp_test.py", line 10
    output_layers = [layer_names[i] - 1] for i in net.getUnconnectedOutLayers().flatten()
                                         ^^^
SyntaxError: invalid syntax
